Add python3 django 1.11 job instead of django 2.0 job
Django 2.0 is now used in tox py35 job, so there is no need for
py35dj20 job. Instead, Django 1.11 with python3 is not covered.

- py35dj20 job is dropped from tox.ini.
- python3-django111 is added to tox.ini.
  python3 is specified to basepython to avoid a specific python version.
- .zuul.yaml is updated to consume horizon-openstack-tox-python3-django111
  and drop horizon-openstack-tox-py35dj20.

Change-Id: I90485a472edb5d2446c7e1bc08554fec72b307a0

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27dj18,py27dj19,py27dj110,py27dj111,py35dj18,py35dj19,py35dj110,py35dj111,pep8,releasenotes
+envlist = py27,py35,py3-dj111,pep8,releasenotes
 minversion = 2.3.2
 skipsdist = True
 
@@ -36,62 +36,14 @@ commands =
   coverage xml
   coverage html
 
-[testenv:py27dj18]
-basepython = python2.7
-commands =
-  pip install django>=1.8,<1.9
-  {[unit_tests]commands}
-
-[testenv:py27dj19]
-basepython = python2.7
-commands =
-  pip install django>=1.9,<1.10
-  {[unit_tests]commands}
-
-[testenv:py27dj110]
-basepython = python2.7
-commands =
-  pip install django>=1.10,<1.11
-  {[unit_tests]commands}
-
-[testenv:py27dj111]
-basepython = python2.7
-commands =
-  pip install django>=1.11,<2.0
-  {[unit_tests]commands}
-
 [testenv:py35]
 basepython = python3.5
 commands = {[unit_tests]commands}
 
-[testenv:py35dj18]
-basepython = python3.5
+[testenv:py3-dj111]
+basepython = python3
 commands =
-  pip install django>=1.8,<1.9
-  {[unit_tests]commands}
-
-[testenv:py35dj19]
-basepython = python3.5
-commands =
-  pip install django>=1.9,<1.10
-  {[unit_tests]commands}
-
-[testenv:py35dj110]
-basepython = python3.5
-commands =
-  pip install django>=1.10,<1.11
-  {[unit_tests]commands}
-
-[testenv:py35dj111]
-basepython = python3.5
-commands =
-  pip install django>=1.11,<2.0
-  {[unit_tests]commands}
-
-[testenv:py35dj20]
-basepython = python3.5
-commands =
-  pip install django>=2.0,<2.1
+  pip install django>=1.11,<2
   {[unit_tests]commands}
 
 [testenv:docs]
