Add py36 testenv
Python 3.6 is installed by default in Ubuntu 18.04 LTS.
Therefore, according to Transition Plan [1],
it'll be handy to have py36 testenv.

For more details, please check Python2 Deprecation Timeline [2]
and Python3-first Goal - Completion Criteria [3].

[1] https://wiki.ubuntu.com/Python/Python36Transition
[2] https://governance.openstack.org/tc/resolutions/20180529-python2-deprecation-timeline.html
[3] https://review.openstack.org/#/c/575933/8/goals/stein/python3-first.rst@42

Change-Id: I2cfd19f5deece8cda8e7ea4b8ee1b747dc5534ef

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ deps = -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/re
 commands =
   py27: {[unit_tests]commands}
   py35: {[unit_tests]commands}
+  py36: {[unit_tests]commands}
 
 [unit_tests]
 commands = python manage.py test heat_dashboard.test --settings=heat_dashboard.test.settings
@@ -38,6 +39,10 @@ commands =
 
 [testenv:py35]
 basepython = python3.5
+commands = {[unit_tests]commands}
+
+[testenv:py36]
+basepython = python3.6
 commands = {[unit_tests]commands}
 
 [testenv:py3-dj111]
