--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,4 +1,11 @@
 - project:
+    templates:
+      - check-requirements
+      - publish-openstack-sphinx-docs
+      - openstack-python-jobs-horizon
+      - openstack-python35-jobs-horizon
+      - nodejs4-jobs
+      - release-notes-jobs
     check:
       jobs:
         - openstack-tox-lower-constraints
