Update hacking version
Use latest release 1.1.0 and compatible changes w.r.t pep8

Change-Id: I45befc03377d96c27db8b1d8d78dd7b5bec5ec14

--- a/tox.ini
+++ b/tox.ini
@@ -79,6 +79,12 @@ local-check-factory = horizon.hacking.checks.factory
 
 [flake8]
 exclude = .venv,.git,.tox,dist,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py,*/local/*,*/test/test_plugins/*,.ropeproject,node_modules,.tmp
+# F405 TEMPLATES may be undefined, or defined from star imports
+# (because it is not easy to avoid this in openstack_dashboard.test.settings)
+# W504 line break after binary operator
+# (W503 and W504 are incompatible and we need to choose one of them.
+#  Existing codes follows W503, so we disable W504.)
+ignore = F405,W504
 max-complexity = 20
 import-order-style = pep8
 
