--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,18 @@ commands =
 [unit_tests]
 commands =
   pip install -r requirements.txt
-  python manage.py test heat_dashboard.test --settings=heat_dashboard.test.settings
+  python manage.py test heat_dashboard.test --settings=heat_dashboard.test.settings --exclude-tag integration
+
+[testenv:integration]
+# Run integration tests only
+passenv = AVCONV_INSTALLED
+setenv =
+  PYTHONHASHSEED=0
+  INTEGRATION_TESTS=1
+  SELENIUM_HEADLESS=1
+  HORIZON_INTEGRATION_TESTS_CONFIG_FILE=heat_dashboard/test/integration/horizon.conf
+basepython = python2.7
+commands = python manage.py test heat_dashboard.test.integration --settings=heat_dashboard.test.settings --tag integration
 
 [testenv:pep8]
 commands = flake8 {posargs}
