--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -28,6 +28,7 @@
       - openstack-lower-constraints-jobs
       - openstack-python-jobs-horizon
       - openstack-python35-jobs-horizon
+      - openstack-python36-jobs-horizon
       - publish-openstack-docs-pti
       - release-notes-jobs-python3
     check:
