Switch python3 versions of test jobs to match Train PTI
In Train, we will use python 3.6 and 3.7 for python3 runtime
in our gate jobs [1]. This commit drops python 3.5 and adds python 3.7.

Redundant entries in tox.ini are cleanup along with python3.5 removal.

[1] https://governance.openstack.org/tc/reference/runtimes/train.html

Co-Authored-By: Akihiro Motoki <amotoki@gmail.com>
Change-Id: Ideb2e7f6e7e3bd0986e5f6d400912a3e4e392e14

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
-envlist = py27,py35,py3-dj111,pep8,releasenotes
-minversion = 2.3.2
+envlist = py27,py36,py37,py3-dj111,pep8,releasenotes
+minversion = 2.5.0
 skipsdist = True
 
 [testenv]
@@ -16,14 +16,10 @@ setenv =
 deps = -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
        -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-commands =
-  py27: {[unit_tests]commands}
-  py35: {[unit_tests]commands}
-  py36: {[unit_tests]commands}
+commands = {[unit_tests]commands}
 
 [unit_tests]
 commands =
-  pip install -r requirements.txt
   python manage.py test heat_dashboard.test --settings=heat_dashboard.test.settings --exclude-tag integration
 
 [testenv:integration]
@@ -49,14 +45,6 @@ commands =
   coverage run --source=heat_dashboard {toxinidir}/manage.py test heat_dashboard.test.tests --settings=heat_dashboard.test.settings {posargs}
   coverage xml
   coverage html
-
-[testenv:py35]
-basepython = python3.5
-commands = {[unit_tests]commands}
-
-[testenv:py36]
-basepython = python3.6
-commands = {[unit_tests]commands}
 
 [testenv:py3-dj111]
 basepython = python3
