--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ setenv =
   NOSE_OPENSTACK_RED=0.05
   NOSE_OPENSTACK_YELLOW=0.025
   NOSE_OPENSTACK_SHOW_ELAPSED=1
-deps = -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
+deps = -c{env:UPPER_CONSTRAINTS_FILE:https://opendev.org/openstack/requirements/raw/branch/master/upper-constraints.txt}
        -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = {[unit_tests]commands}
@@ -57,13 +57,13 @@ commands =
 
 [testenv:docs]
 basepython = python3
-deps = -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
+deps = -c{env:UPPER_CONSTRAINTS_FILE:https://opendev.org/openstack/requirements/raw/branch/master/upper-constraints.txt}
        -r{toxinidir}/doc/requirements.txt
 commands = python setup.py build_sphinx
 
 [testenv:releasenotes]
 basepython = python3
-deps = -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
+deps = -c{env:UPPER_CONSTRAINTS_FILE:https://opendev.org/openstack/requirements/raw/branch/master/upper-constraints.txt}
        -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
