--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -15,8 +15,8 @@
       - ^releasenotes/.*$
     vars:
       devstack_plugins:
-        heat: https://git.openstack.org/openstack/heat
-        heat-dashboard: https://git.openstack.org/openstack/heat-dashboard
+        heat: https://opendev.org/openstack/heat
+        heat-dashboard: https://opendev.org/openstack/heat-dashboard
       devstack_services:
         horizon: true
       tox_envlist: integration
