--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -24,7 +24,7 @@
 - project:
     templates:
       - check-requirements
-      - nodejs4-jobs
+      - horizon-nodejs10-jobs
       - openstack-lower-constraints-jobs
       - openstack-python-jobs-horizon
       - openstack-python3-train-jobs-horizon
