Use Horizon project template for django jobs
Horizon defined a project template 'horizon-non-primary-django-jobs'
for django jobs. This patch use that template to run django jobs
here and also fixes failed test cases for django2.2 support.
For information please refer [1]

[1] https://review.opendev.org/#/c/681969/

Change-Id: I3ab81402633b9abe39e49c3921585db992050540

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py36,py37,py3-dj111,pep8,releasenotes
+envlist = py27,py36,py37,py3-{dj111,dj22},pep8,releasenotes
 minversion = 2.5.0
 skipsdist = True
 
@@ -16,10 +16,9 @@ setenv =
 deps = -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
        -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-commands = {[unit_tests]commands}
-
-[unit_tests]
 commands =
+  dj111: pip install django>=1.11,<2
+  dj22: pip install django>=2.2,<2.3
   python manage.py test heat_dashboard.test --settings=heat_dashboard.test.settings --exclude-tag integration
 
 [testenv:integration]
@@ -48,12 +47,6 @@ commands =
   coverage run --source=heat_dashboard {toxinidir}/manage.py test heat_dashboard.test.tests --settings=heat_dashboard.test.settings {posargs}
   coverage xml
   coverage html
-
-[testenv:py3-dj111]
-basepython = python3
-commands =
-  pip install django>=1.11,<2
-  {[unit_tests]commands}
 
 [testenv:docs]
 basepython = python3
