[ussuri][goal] Drop python 2.7 support and testing
OpenStack is dropping the py2.7 support in ussuri cycle.

heat-dashboard is ready with python 3 and ok to drop the
python 2.7 support.

Also this patch update minimum tox version in tox.ini file.
Complete discussion & schedule can be found in
- http://lists.openstack.org/pipermail/openstack-discuss/2019-October/010142.html
- https://etherpad.openstack.org/p/drop-python2-support

Ussuri Communtiy-wide goal:
https://governance.openstack.org/tc/goals/selected/ussuri/drop-py27.html

Change-Id: I63d6c5dfb2bb312c413b9350fa7c9a01eae6cd0b

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,12 @@
 [tox]
-envlist = py27,py36,py37,py3-{dj111,dj22},pep8,releasenotes
-minversion = 2.5.0
+envlist = py36,py37,py3-{dj111,dj22},pep8,releasenotes
+minversion = 3.1.1
 skipsdist = True
+ignore_basepython_conflict = True
 
 [testenv]
 usedevelop = True
+basepython = python3
 setenv =
   VIRTUAL_ENV={envdir}
   INTEGRATION_TESTS=0
@@ -29,19 +31,15 @@ setenv =
   INTEGRATION_TESTS=1
   SELENIUM_HEADLESS=1
   HORIZON_INTEGRATION_TESTS_CONFIG_FILE=heat_dashboard/test/integration/horizon.conf
-basepython = python2.7
 commands = python manage.py test heat_dashboard.test.integration --settings=heat_dashboard.test.settings --tag integration
 
 [testenv:pep8]
-basepython = python3
 commands = flake8 {posargs}
 
 [testenv:venv]
-basepython = python3
 commands = {posargs}
 
 [testenv:cover]
-basepython = python3
 commands =
   coverage erase
   coverage run --source=heat_dashboard {toxinidir}/manage.py test heat_dashboard.test.tests --settings=heat_dashboard.test.settings {posargs}
@@ -49,13 +47,11 @@ commands =
   coverage html
 
 [testenv:docs]
-basepython = python3
 deps = -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
        -r{toxinidir}/doc/requirements.txt
 commands = python setup.py build_sphinx
 
 [testenv:releasenotes]
-basepython = python3
 deps = -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
        -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
@@ -75,7 +71,6 @@ max-complexity = 20
 import-order-style = pep8
 
 [testenv:npm]
-basepython = python3
 passenv =
   HOME
   DISPLAY
@@ -97,7 +92,6 @@ max-line-length = 80
 ignore = D000
 
 [testenv:lower-constraints]
-basepython = python3
 deps =
   -c{toxinidir}/lower-constraints.txt
   -r{toxinidir}/test-requirements.txt
