--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py37,py3-{dj111,dj22},pep8,releasenotes
+envlist = py36,py37,pep8,releasenotes
 minversion = 3.1.1
 skipsdist = True
 ignore_basepython_conflict = True
@@ -19,8 +19,6 @@ deps = -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/
        -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands =
-  dj111: pip install django>=1.11,<2
-  dj22: pip install django>=2.2,<2.3
   python manage.py test heat_dashboard.test --settings=heat_dashboard.test.settings --exclude-tag integration
 
 [testenv:integration]
