--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist = py36,py37,py3-{dj111,dj22},pep8,releasenotes
-#minversion = 3.1.1
+minversion = 3.1.1
 skipsdist = True
 ignore_basepython_conflict = True
 
