--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "4.9.0",
     "eslint-plugin-angular": "3.1.1",
     "eslint-plugin-jasmine": "2.9.1",
+    "esquery": "1.1.0",
     "file-saver": "1.3.2",
     "jasmine": "2.8.0",
     "jasmine-core": "2.8.0",
