Cleanup py27 support
This repo is now testing only with Python 3, so let's make
a few cleanups:
- Remove python 2.7 stanza from setup.py
- Remove obsolete sections from setup.cfg
- Update classifiers
- Update requirements, no need for python_version anymore
- Switch to using sphinx-build
- Use newer openstackdocstheme and Sphinx versions
- Cleanup */source/conf.py to remove now obsolete content.

Change-Id: Icf69fa99ed77a0935062ee4fc8e9c6a195b381e5

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ setenv =
   NOSE_OPENSTACK_RED=0.05
   NOSE_OPENSTACK_YELLOW=0.025
   NOSE_OPENSTACK_SHOW_ELAPSED=1
-deps = -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+deps = -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
        -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands =
@@ -45,9 +45,9 @@ commands =
   coverage html
 
 [testenv:docs]
-deps = -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+deps = -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
        -r{toxinidir}/doc/requirements.txt
-commands = python setup.py build_sphinx
+commands = sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:pdf-docs]
 basepython = python3
@@ -60,8 +60,7 @@ commands =
   make -C doc/build/pdf
 
 [testenv:releasenotes]
-deps = -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
-       -r{toxinidir}/doc/requirements.txt
+deps = {[testenv:docs]deps}
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
 # Temporary disabled to pass the pep8 job
