--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist = py36,py37,pep8,releasenotes
-minversion = 3.1.1
+minversion = 3.18.0
 skipsdist = True
 ignore_basepython_conflict = True
 
@@ -53,7 +53,7 @@ commands = sphinx-build -W -b html doc/source doc/build/html
 basepython = python3
 envdir = {toxworkdir}/docs
 deps = {[testenv:docs]deps}
-whitelist_externals =
+allowlist_externals =
   make
 commands =
   sphinx-build -W -b latex doc/source doc/build/pdf
