--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py37,pep8,releasenotes
+envlist = py3,pep8,releasenotes
 minversion = 3.18.0
 skipsdist = True
 ignore_basepython_conflict = True
