--- a/tox.ini
+++ b/tox.ini
@@ -70,7 +70,8 @@ exclude = .venv,.git,.tox,dist,*lib/python*,*egg,build,panel_template,dash_templ
 # W504 line break after binary operator
 # (W503 and W504 are incompatible and we need to choose one of them.
 #  Existing codes follows W503, so we disable W504.)
-ignore = F405,W504
+# I202 Additional newline in a group of imports.
+ignore = F405,W504,I202
 max-complexity = 20
 import-order-style = pep8
 
