Display coverage report
... for easy reference. Also make sure old data is purged.

Change-Id: Ic5f0ec8e72db3a767625cb72489e396628e0237f

--- a/.gitignore
+++ b/.gitignore
@@ -38,13 +38,12 @@ pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-htmlcov/
 .tox/
 .coverage
 .coverage.*
+cover
 .cache
 nosetests.xml
-coverage.xml
 *.cover
 .hypothesis/
 ut_*_nose_results.html
