--- a/tox.ini
+++ b/tox.ini
@@ -41,8 +41,9 @@ commands = {posargs}
 commands =
   coverage erase
   coverage run --source=heat_dashboard {toxinidir}/manage.py test {posargs:heat_dashboard.test.tests} --settings=heat_dashboard.test.settings
-  coverage xml
-  coverage html
+  coverage html -d cover
+  coverage xml -o cover/coverage.xml
+  coverage report
 
 [testenv:docs]
 deps = -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
