Skip integration tests for update without functional impact
Change-Id: I9a7878f47d8bf6ee2dba4c86a068bc2459ba2966
Signed-off-by: Takashi Kajinami <kajinamit@oss.nttdata.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -10,8 +10,10 @@
       - zuul: openstack-infra/devstack
       - zuul: openstack/horizon
     irrelevant-files:
-      - ^.*\.rst$
+      - ^\.gitreview$
+      - ^\.pre-commit-config\.yaml$
       - ^doc/.*$
+      - ^.*\.rst$
       - ^releasenotes/.*$
     vars:
       devstack_plugins:
