Skip integration tests for .gitignore update
The file has no functional impact.

Change-Id: I2e08c475d6a11a84e0752e7964a66bc869c20e4c
Signed-off-by: Takashi Kajinami <kajinamit@oss.nttdata.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -10,6 +10,7 @@
       - zuul: openstack-infra/devstack
       - zuul: openstack/horizon
     irrelevant-files:
+      - ^\.gitignore$
       - ^\.gitreview$
       - ^\.pre-commit-config\.yaml$
       - ^doc/.*$
